--- a/CppTPS/Saved/Config/Windows/Engine.ini
+++ b/CppTPS/Saved/Config/Windows/Engine.ini
@@ -27,6 +27,7 @@ Paths=../../../Engine/Plugins/Editor/SpeedTreeImporter/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 Paths=C:/Users/s.dronskiy/Documents/Unreal Projects/CppTPS/Plugins/WoodyQuests/Content
+Paths=C:/Users/s.dronskiy/Documents/Unreal Projects/UE_CPP_Classes/CppTPS/Plugins/WoodyQuests/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
